# AI-DNA

./: .gitignore  AI-DNA_ 类生命可进化 AI 架构概念文档（无代码版）.md  CITATION.md  README.md  README.zh-CN.md  pyproject.toml
ai_dna/: __init__.py  __main__.py  benchmarks.py  cli.py  codons.py  evolution.py  genome.py  models.py  operators.py  parser.py  reporting.py  runtime.py  types.py
docs/: promo-kit.md
examples/: benchmark_with_model.py  demo.py
outputs/: REPORT.md  benchmark_details.csv  benchmark_summary.csv  evolution_history.csv  experiment_summary.json
tests/: test_evolution.py  test_runtime.py
