[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dna"
version = "0.1.0"
description = "Prototype implementation of the AI-DNA evolvable agent architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
hf = [
  "transformers>=4.41",
  "torch>=2.2",
]
report = [
  "matplotlib>=3.8",
  "pandas>=2.0",
  "seaborn>=0.13",
]
full = [
  "transformers>=4.41",
  "torch>=2.2",
  "matplotlib>=3.8",
  "pandas>=2.0",
  "seaborn>=0.13",
]

[tool.setuptools]
packages = ["ai_dna"]
